# Dev-Productivity-Platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/adapters/: base.py  github.py  jira.py  slack.py
backend/agent/: graph.py  nodes.py  prompts.py  state.py
backend/context/: assembly.py  embeddings.py
backend/evals/: dataset.py  runner.py  scorers.py
backend/evals/reports/: latest.json
backend/providers/: config.py  llm.py
backend/schemas/: models.py
db/migrations/: 001_init.sql
docs/: abstention.md  architecture.md  evals.md  providers.md  schemas.md
fixtures/: generate.py  personas.py  seed_db.py
fixtures/history/: insights.json  prs.json
fixtures/scenarios/: 001_scenario.json  002_scenario.json  003_scenario.json  004_scenario.json  005_scenario.json  006_scenario.json  007_scenario.json  008_scenario.json  009_scenario.json  010_scenario.json  011_scenario.json  012_scenario.json  013_scenario.json  014_scenario.json  015_scenario.json  016_scenario.json  017_scenario.json  018_scenario.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/result/[run_id]/: page.tsx
