[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-productivity-platform"
version = "0.1.0"
description = "Contextual insight engine for dev team productivity — divergence detection with severity calibration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.1.140",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "pydantic>=2.10.0",
    "pgvector>=0.3.5",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
